--- a/docs/reference-guide/pom.xml
+++ b/docs/reference-guide/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.gatein.doc</groupId>
         <artifactId>docs-aggregator</artifactId>
-        <version>3.3.0-CR01-SNAPSHOT</version>
+        <version>3.3.0-CR01-cadobongda</version>
     </parent> 
     
     <groupId>org.gatein.doc</groupId>
