--- a/examples/extension/ear/pom.xml
+++ b/examples/extension/ear/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.exoplatform.portal</groupId>
     <artifactId>exo.portal.parent</artifactId>
-    <version>3.3.0-CR01-SNAPSHOT</version>
+    <version>3.3.0-CR01-cadobongda</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
@@ -38,23 +38,23 @@
     <dependency>
       <groupId>org.exoplatform.portal</groupId>
       <artifactId>exo.portal.sample.extension.config</artifactId>
-      <version>3.3.0-CR01-SNAPSHOT</version>
+      <version>3.3.0-CR01-cadobongda</version>
     </dependency>
     <dependency>
       <groupId>org.exoplatform.portal</groupId>
       <artifactId>exo.portal.sample.extension.jar</artifactId>
-      <version>3.3.0-CR01-SNAPSHOT</version>
+      <version>3.3.0-CR01-cadobongda</version>
     </dependency>
     <dependency>
       <groupId>org.exoplatform.portal</groupId>
       <artifactId>exo.portal.component.web.api</artifactId>
-      <version>3.3.0-CR01-SNAPSHOT</version>
+      <version>3.3.0-CR01-cadobongda</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.exoplatform.portal</groupId>
       <artifactId>exo.portal.sample.extension.war</artifactId>
-      <version>3.3.0-CR01-SNAPSHOT</version>
+      <version>3.3.0-CR01-cadobongda</version>
       <type>war</type>
     </dependency>
   </dependencies>
