--- a/packaging/jboss-as7/pom.xml
+++ b/packaging/jboss-as7/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>org.exoplatform.portal</groupId>
       <artifactId>exo.portal.packaging</artifactId>
-      <version>3.3.0-CR01-SNAPSHOT</version>
+      <version>3.3.0-CR01-cadobongda</version>
    </parent>
 
    <artifactId>exo.portal.packaging.jboss7</artifactId>
