Embedded HornetQ messaging provider

--- a/component/common/src/main/java/conf/configuration-tomcat.properties
+++ b/component/common/src/main/java/conf/configuration-tomcat.properties
@@ -76,3 +76,6 @@ gatein.portal.controller.config=${gatein.conf.dir}/controller.xml
 # Key files for gadget
 gatein.gadgets.securitytokenkeyfile=${gatein.conf.dir}/gadgets/key.txt
 gatein.gadgets.signingkeyfile=${gatein.conf.dir}/gadgets/oauthkey.pem
+
+# Configuration directory for embedded messaging
+cadobongda.hornetConfig.dir=${gatein.conf.dir}/hornetQ
