--- a/component/betmodules/pom.xml
+++ b/component/betmodules/pom.xml
@@ -20,32 +20,22 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <parent>
+    <groupId>org.exoplatform.portal</groupId>
+    <artifactId>exo.portal.component</artifactId>
+    <version>3.3.0-CR01-cadobongda</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>exo.portal.component.betmodules</artifactId>
+  <packaging>pom</packaging>
+  <name>Bet modules</name>
 
-   <modelVersion>4.0.0</modelVersion>
+  <properties>
+    <hornetq.version>2.2.5.Final</hornetq.version>
+  </properties>
 
-   <parent>
-      <groupId>org.exoplatform.portal</groupId>
-      <artifactId>exo.portal.parent</artifactId>
-      <version>3.3.0-CR01-cadobongda</version>
-   </parent>
-
-   <artifactId>exo.portal.component</artifactId>
-   <packaging>pom</packaging>
-
-   <name>GateIn Portal Component</name>
-
-   <modules>
-      <module>test</module>
-      <module>common</module>
-      <module>pc</module>
-      <module>resources</module>
-      <module>application-registry</module>
-      <module>portal</module>
-      <module>web</module>
-      <module>scripting</module>
-      <module>management</module>
-      <module>betmodules</module>
-      <module>identity</module>
-   </modules>
+  <modules>
+    <module>messaging</module>
+  </modules>
 
 </project>
